# efficient-dl-systems

./: .gitignore
week02_management_and_testing/homework/: hparams.py  hydra_config.yaml  main.py  pyproject.toml  requirements.txt
week02_management_and_testing/homework/conf/: config.yaml
week02_management_and_testing/homework/modeling/: diffusion.py  training.py  unet.py
week02_management_and_testing/homework/tests/: test_model.py  test_pipeline.py
week02_management_and_testing/homework/wandb/: latest-run
week02_management_and_testing/homework/wandb/run-20250209_193209-ijo1bo9f/: run-ijo1bo9f.wandb
week02_management_and_testing/homework/wandb/run-20250209_194245-6hej2sjr/: run-6hej2sjr.wandb
week02_management_and_testing/homework/wandb/run-20250209_194718-cme7dfxf/: run-cme7dfxf.wandb
week02_management_and_testing/homework/wandb/run-20250209_195833-5j6mmxay/: run-5j6mmxay.wandb
week02_management_and_testing/homework/wandb/run-20250209_201559-rv2l5wbq/: run-rv2l5wbq.wandb
week02_management_and_testing/homework/wandb/run-20250209_203214-uxbqrwm2/: run-uxbqrwm2.wandb
week02_management_and_testing/homework/wandb/run-20250209_203312-15axxqcl/: run-15axxqcl.wandb
week02_management_and_testing/homework/wandb/run-20250209_203337-lm0m20t2/: run-lm0m20t2.wandb
week02_management_and_testing/homework/wandb/run-20250209_203402-jylf22oe/: run-jylf22oe.wandb
week02_management_and_testing/homework/wandb/run-20250209_203517-rkur44pg/: run-rkur44pg.wandb
week02_management_and_testing/homework/wandb/run-20250209_203613-amw3e8om/: run-amw3e8om.wandb
(+144 files in other folders)
